--- a/renderer/index.html
+++ b/renderer/index.html
@@ -22,7 +22,7 @@
         <input type="text" id="APItoken">
     </div>
     <div id="FIRairportsManagement">
-        <h4>FIR Airports: </h4>
+        <h4 id="FIRairportsTitle">FIR Airports: </h4>
         <select name="FIR" id="FIRselect">
             <option value="LFFF">LFFF</option>
             <option value="LFBB">LFBB</option>
