--- a/renderer/index.html
+++ b/renderer/index.html
@@ -9,7 +9,14 @@
     <title>Automatic Runway Assignement System</title>
 </head>
 <body>
-    <h1>Automatic Runway Assignement System</h1>
+    <div id="title-bar">
+        <img id="title-icon" src="../build-assets/icon.png" alt="ico" width="25">
+        <div id="title-text">Automatic Runway Assignement System</div>
+        <div id="window-controls">
+            <button id="minimize-window">-</button>
+            <button id="close-window">X</button>
+        </div>
+    </div>
     <div id="status">
         <h2>Status:</h2>
         <h4 class="statusIndicators" id="rwydata" title="rwydata.json not found">rwydata.json</h4>
