--- a/renderer/index.html
+++ b/renderer/index.html
@@ -17,6 +17,17 @@
             <button id="close-window">X</button>
         </div>
     </div>
+
+    <div class="notifications success">
+        <h3>[SUCCESS]</h3>
+    </div>
+    <div class="notifications failure">
+        <h3>[Failure]</h3>
+    </div>
+    <div class="notifications processing">
+        <h3>[Processing]</h3>
+    </div>
+
     <div id="status">
         <h2>Status:</h2>
         <h4 class="statusIndicators" id="rwydata" title="rwydata.json not found">rwydata.json</h4>
