Added notification animation

--- a/renderer/index.html
+++ b/renderer/index.html
@@ -18,14 +18,16 @@
         </div>
     </div>
 
-    <div class="notifications success">
-        <h3>[SUCCESS]</h3>
-    </div>
-    <div class="notifications failure">
-        <h3>[Failure]</h3>
-    </div>
-    <div class="notifications processing">
-        <h3>[Processing]</h3>
+    <div class="notifications">
+        <div class="success">
+            <h3>[SUCCESS]</h3>
+        </div>
+        <div class="failure">
+            <h3>[Failure]</h3>
+        </div>
+        <div class="processing">
+            <h3>[Processing]</h3>
+        </div>
     </div>
 
     <div id="status">
