--- a/renderer/index.html
+++ b/renderer/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <meta http-equiv="Content-Security-Policy" content="script-src 'self'"/> -->
     <link rel="stylesheet" href="style.css" />
-    <script src="renderer.js" defer></script>
+    <script type="module" src="renderer.js"></script>
     <title>Automatic Runway Assignement System</title>
 </head>
 <body>
