Moved to new folder

--- a/renderer/html/index.html
+++ b/renderer/html/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css" />
-    <script type="module" src="./js/renderer.js"></script>
+    <link rel="stylesheet" href="../css/style.css" />
+    <script type="module" src="../js/renderer.js"></script>
     <title>Automatic Runway Assignement System</title>
 </head>
 <body>
     <div id="title-bar">
-        <img id="title-icon" src="../build-assets/icon.png" alt="ico" width="25">
+        <img id="title-icon" src="../../build-assets/icon.png" alt="ico" width="25">
         <div id="title-text">Automatic Runway Assignement System</div>
         <div id="window-controls">
             <button id="minimize-window">-</button>
