--- a/renderer/html/setting.html
+++ b/renderer/html/setting.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Settings</title>
-    <script type="module" src="./js/settings.js"></script>
-    <link rel="stylesheet" href="./css/settings.css">
+    <script type="module" src="../js/settings.js"></script>
+    <link rel="stylesheet" href="../css/settings.css">
 </head>
 <body>
     <div id="title-bar">
-        <img id="title-icon" src="../build-assets/icon.png" alt="ico" width="25">
+        <img id="title-icon" src="../../build-assets/icon.png" alt="ico" width="25">
         <div id="title-text"></div>
         <div id="window-controls">
             <button id="minimize-window">-</button>
