--- a/renderer/html/splash.html
+++ b/renderer/html/splash.html
@@ -6,21 +6,40 @@
     <title>Splash Screen</title>
 </head>
 <body>
-    <h3>ARAS is loading</h3>
-    <div class="loader"></div>
+    <div class="container">
+        <img src="../../build-assets/icon.png" alt="" height="200px" width="200px">
+        <div class="loader"></div>
+    </div>
 
     <style>
         body {
-           background-color: rgb(82, 82, 82);
-           cursor: default;
-           user-select: none;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin: 0;
+            padding: 0;
+            cursor: default;
+            user-select: none;
+            overflow: hidden;
         }
 
-        h3 {
-            color: white;
-            text-align: center;
-            font-size: 32px;
-            margin-top: 120px;
+        .container {
+            z-index: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin-top: 70px;
+            height: 300px;
+            width: 300px;
+            border: 5px solid rgb(61, 61, 61);
+            border-radius: 50px;
+            background-color: rgba(82, 82, 82, 0.658);
+        }
+
+        img {
+            position: absolute;
+            top: 80px;
+            pointer-events: none;
         }
 
         .flex {
@@ -28,10 +47,11 @@
             -ms-flex: 1 1 auto;
             flex: 1 1 auto
         }
+
         .loader {
             border: 5px solid rgb(255, 255, 255);
             border-radius: 50%;
-            border-top: 5px solid rgb(82, 82, 82);
+            border-top: 5px solid rgba(82, 82, 82, 0.658);
             width: 40px;
             height: 40px;
             -webkit-animation: spin 1s linear infinite;
@@ -40,7 +60,7 @@
             margin: auto;
             left: 0;
             right: 0;
-            top: 0px;
+            top: 240px;
             bottom: 0;
             position: fixed;
         }
