Made it work again

--- a/renderer/html/splash.html
+++ b/renderer/html/splash.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="../../build-assets/icon.png" alt="" height="200px" width="200px">
+        <img src="build-assets/icon.png" alt="" height="200px" width="200px">
         <div class="loader"></div>
     </div>
 
