--- a/renderer/html/splash.html
+++ b/renderer/html/splash.html
@@ -7,10 +7,15 @@
 </head>
 <body>
     <div class="container">
-        <img src="build-assets/icon.png" alt="" height="200px" width="200px">
+        <img id="image" src="build-assets/icon.png" alt="" height="200px" width="200px">
         <div class="loader"></div>
     </div>
-
+<script>
+    ipcRenderer.send('get-image-path');
+    ipcRenderer.on('image-path', (event, arg) => {
+        document.getElementById('image').src = arg;
+    });
+</script>
     <style>
         body {
             display: flex;
